# feed_proxy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  MANIFEST.in  Makefile  README.md  README.rst  ci.sh  docker-compose.yml  feed_proxy_server  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  sources.example.ini
.devcontainer/: Dockerfile.workspace  README.md  devcontainer-lock.json  devcontainer.json
.github/workflows/: ci-build.yml  ci-push.yml  ci-test.yml  workflow-ci.yml
docs/plans/: 20260531-pre-send-processors-translator.md  20260721-dedup-group-firstrun-scope.md  20260721-source-dedup-groups.md  20260721-wordpress-parser.md
docs/plans/completed/: 20260531-pre-send-processors-translator.md  20260721-dedup-group-firstrun-scope.md  20260721-source-dedup-groups.md  20260721-wordpress-parser.md
feed_proxy/: __init__.py  __main__.py  conf.py  config.py  configuration.py  db.py  deps.py  entities.py  exceptions.py  fetch_posts_from_sources.py  fetchers.py  handlers.py  logic.py  messages_outbox.py  observability.py  parsers.py  proxies.py  schema.py  senders.py  storage.py  test.py  utils.py
feed_proxy/bank/: storage.py
feed_proxy/cli/: config.py  run.py  run_watcher.py
feed_proxy/db/: schema.py
feed_proxy/handlers/: __init__.py  configuration.py  types.py
feed_proxy/handlers/fetchers/: fetch_text.py
feed_proxy/handlers/modifiers/: comparison.py  regex_replace.py  replace.py  strip_html.py
feed_proxy/handlers/parsers/: fotocasa.py  idealista.py  reddit_json.py  rss.py  wordpress.py
feed_proxy/handlers/pre_send_processors/: llm_prompt.py  translator.py
feed_proxy/handlers/receivers/: console_printer.py  telegram_bot.py
feed_proxy/http_tools/: __init__.py  core.py
feed_proxy/sentry/: error_tracking.py  setup.py
feed_proxy/test/: factory.py
feed_proxy/utils/: http.py  text.py
old_proj/: .gitignore  README.rst  requirements.dev.txt  requirements.txt  setup.cfg
old_proj/.github/workflows/: ci-push.yml
old_proj/feed_proxy/: __main__.py  conf.py  handlers.py  schema.py
old_proj/feed_proxy/db/: __main__.py
old_proj/tests/fixtures/: audio_0b.xml  audio_lt_20mb.xml  feed_base.xml  has_published.xml  has_tags.xml  wo_author.xml  wo_id.xml  (+1 more)
src/: db.py  parsers.py
tests/: conftest.py  factory.py  sources.ini  test_configuration_loader.py  test_db.py  test_foo.py  test_logic.py  test_messages_outbox.py  test_messages_outbox_storage.py  test_post_storage.py  test_storage.py  test_utils.py
tests/bank/: conftest.py  test_account.py  test_storage.py  test_transaction.py
tests/fixtures/: audio_0b.xml  audio_gt_20mb.xml  audio_lt_20mb.xml  empty_author.xml  empty_feed.xml  feed.xml  has_published.xml  has_tags.xml  regular.xml  wo_author.xml  wo_date.xml  wo_id.xml  wrong_date.xml
tests/test_config/: test_config.py  test_config_parser.py  test_config_storage.py  test_source_settings.py
tests/test_parsers/: test_attachment.py  test_post.py  test_rss_feed_parser.py
tests/test_proxies/: test_proxy.py
tests/test_senders/: test_telegram_sender.py
tests/unit/: test_config_reader.py  test_dunder_main.py  test_fetchers.py  test_parse_posts.py  test_parsers.py  test_rss_feed_proxy_parser.py  test_utils.py
tests/utils/: test_text.py
(+26 files in other folders)
