[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "feed_proxy"
description = "FeedProxy is an app for aggregate posts from RSS feeds to Telegram."
version = "0.1.0"
license = "MIT"
authors = [
  "yakimka"
]

readme = "README.md"

repository = "https://github.com/yakimka/feed_proxy"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
dacite = "^1.8.1"
feedparser = "^6.0.11"
tldextract = "^5.1.3"
sentry-sdk = "^2.19.0"
httpx = "^0.27.2"
aiogram = "^3.15.0"
picodi = "^0.30.0"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.12"
types-pyyaml = "^6.0.12.20240917"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = "88"

[tool.black]
line-length = "88"

[tool.pytest.ini_options]
pythonpath = "."
# Directories that are not visited by pytest collector:
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
  ".cache",
  ".venv",
  "venv",
  ".pre-commit",
]

# Strict `@xfail` by default:
xfail_strict = true

# pytest-asyncio
asyncio_mode = "auto"

# Extra options:
addopts = [
  # don't add --cov because it breaks pycharm debugger
  #   just add it manaually when needed to cmd args
  "--import-mode=importlib",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov-report=term-missing",
#  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "pass",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
files = ["."]
exclude = ["tests/"]
##
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = 'true'
disallow_untyped_decorators = 'true'
disallow_untyped_defs = 'true'
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
